* updated Ukrainian translation (Gennadi Motsyo)
* updated Czech translation (Karel Volný)
* updated Russian translation
* updated Hungarian translation (Németh Gábor)
* updated Lithuanian translation (Algirdas Butkus)
* updated Polish translation (Grzegorz Gibas)

Version 0.4.1
* added Dutch translation (Ronald Uitermark)
* added shorten audio format
* fixed flv playback
* fixed mplayer support
* fixed popup notifications
* fixed time format
* fixed possible segmentation fault
* fixed bug which causes equalizer to appear when closing the preferences window
* fixed notification template
* fixed mpris regression
* fixed url dialog
* fixed removable volumes detection
* fixed problem with metadata updating
* skip invalid files
* removed obsolete memalign function

Version 0.4.2
* added Japanese translation (RyoTa SimaMoto)
* added Spanish translation (Félix Medrano)
* added offset support into mplayer plugin
* updated German translation (Panagiotis Papadopoulos)
* updated Polish translation (Grzegorz Gibas)
* fixed build scripts
* fixed shorten playback
* fixed freezes on corrupted files
* fixed problem with UDS under freebsd (RyoTa SimaMoto)
* fixed oss delays
* fixed possible freezes with mplayer plugin
* fixed problems with some video files 
* fixed lyrics plugin (due api changes)
* fixed template parsing (Avihay Baratz)
* optimized tag editor form
* removed deprecated functions from jack plugin

Version 0.4.3
* added dvd autodetection
* added possibility to center balance on middle-click (Panagiotis Papadopoulos)
* fixed build (Christian Morales Vega)
* fixed problems with pidgin music tracker
* fixed command line processing
* fixed skins list update
* fixed segmentation fault on video playback
* fixed bug with 'next' command processing
* fixed memory leak
* fixed vorbis comment saving
* fixed aac streams support
* fixed ape noise while seeking
* fixed Russian translation
* fixed crash when adding multiple directories simultaneously