@@ -452,3 +452,4 @@ Version 0.4.3
 * fixed ape noise while seeking
 * fixed Russian translation
 * fixed crash when adding multiple directories simultaneously
+* fixed add/remove effects problem
